# EduMelon

./: .gitignore  README.md  RELEASE_NOTES.md  RESET_ONBOARDING.txt  index.html  latest.json  mcp.json  package-lock.json  package.json  tailwind.config.js
Design/dashboard_edumelon/: code.html
Design/onboarding_gotowe/: code.html
Design/onboarding_imi_i_nazwisko/: code.html
Design/onboarding_kierunek_studi_w/: code.html
Design/onboarding_uczelnia/: code.html
Design/streszczenie_prezentacji_edumelon/: code.html
Design/testy/: specyfikacja_modu_u_testy_edumelon.md
Design/tryb_fiszek_edumelon/: code.html
Design/wgrywanie_i_analiza_edumelon/: code.html
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AppShell.tsx  CreateFolderModal.tsx  CreateStudyEventModal.tsx  FirstRunTutorial.tsx  FolderPicker.tsx  OllamaModelsFolderSection.tsx  ThemeProvider.tsx
src/lib/: constants.ts  db.ts  devtools.ts  exportCsv.ts  flashcardVariety.ts  flashcardsOllama.ts  folderColors.ts  ingest.ts  ollama.ts  ollamaAutostart.ts  ollamaModelsPath.ts  parseFlashcardsResponse.ts  pdfVisionOcr.ts  prompts.ts  rag.ts  storage.ts  supabase.ts  testsOllama.ts  theme.ts  updater.ts  usageStats.ts
src/pages/: Dashboard.tsx  Flashcards.tsx  FlashcardsHub.tsx  OllamaGate.tsx  Onboarding.tsx  RootGate.tsx  Settings.tsx  Summary.tsx  Tests.tsx  TestsHub.tsx  Upload.tsx
src/tutorial/: DemoFlashcards.tsx  DemoSummary.tsx  DemoTests.tsx  (+1 more)
(+5 files in other folders)
